@@ -211,9 +211,6 @@ QString Config::getData (Parm p)
     case LogScale:
       s = settings.readEntry("/Qtstalker/LogScale", "0");
       break;
-    case NavigatorPosition:
-      s = settings.readEntry("/Qtstalker/NavigatorPosition", "1");
-      break;
     case StackedIndicator:
       s = settings.readEntry("/Qtstalker/StackedIndicator", "");
       break;
@@ -322,9 +319,6 @@ void Config::setData (Parm p, QString d)
       break;
     case LogScale:
       settings.writeEntry("/Qtstalker/LogScale", d);
-      break;
-    case NavigatorPosition:
-      settings.writeEntry("/Qtstalker/NavigatorPosition", d);
       break;
     case StackedIndicator:
       settings.writeEntry("/Qtstalker/StackedIndicator", d);
