@@ -113,6 +113,8 @@
 20040428: Moved the "Tab Position Top" parm from prefs menu to a context menu activated by
           mouse right click on the indicator tab area. 
 	  	  
+20040428: Moved the "Navigator Position Left" parm from prefs menu to a context menu activated by
+          mouse right click on the navigator tab area. 
 	
 0.25
 ====
